@@ -1,4 +1,9 @@
 
+2015-04-28  Ron Norman
+	* codegen.c updated to emit extern int routinename ();
+	  for each subroutine called statically. Without this
+	  you get C compiler warnings
+
 2015-04-27  Ron Norman
 
 	* cobc.c codegen.c common.h typeck.c
